--- a/index.html
+++ b/index.html
@@ -1,17 +1,80 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PROYECTO JAVASCRIPT</title>
-    <!-- javascript -->
-    <script defer src="./js/main.js"></script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>ELECTRODOMESTICOS ALEJO</title>
+    <link rel="stylesheet" href="css/styles.css" />
 </head>
 
 <body>
-    <h1>PROYECTO ELECTRODOMESTICOS</h1>
-    <P>Esta sera una pagina de venta de electrodomesticos donde al seleccionar el producto del 1 al 4 se agregara y luego si ya quieres comprar simplemente darle a la opcion "Comprar" o si quieres salir darle a la opcion "Salir"</P>
+    <header class="container">
+        <h1>ElectroShop</h1>
+        <p class="muted">
+            Simulador de compra de electrodomésticos
+        </p>
+    </header>
+
+    <main class="container grid">
+        <!-- Catálogo -->
+        <section class="card">
+            <h2>Catálogo</h2>
+
+            <div class="row">
+                <input id="search" type="search" placeholder="Buscar producto (ej: lavadora)" />
+                <select id="category">
+                    <option value="all">Todas</option>
+                    <option value="Lavado">Lavado</option>
+                    <option value="Cocina">Cocina</option>
+                    <option value="Frío">Frío</option>
+                </select>
+            </div>
+
+            <div id="productList" class="list"></div>
+            <p id="emptyProducts" class="muted hidden">No hay productos con ese filtro.</p>
+        </section>
+
+        <!-- Carrito -->
+        <section class="card">
+            <h2>Carrito</h2>
+
+            <div id="cartList" class="list"></div>
+            <p id="emptyCart" class="muted">Tu carrito está vacío.</p>
+
+            <div class="totals">
+                <div class="line">
+                    <span>Total</span>
+                    <strong id="total">$0</strong>
+                </div>
+                <div class="row">
+                    <button id="clearCart" class="btn danger" type="button">Vaciar</button>
+                    <button id="checkout" class="btn" type="button">Finalizar compra</button>
+                </div>
+                <p id="message" class="message" aria-live="polite"></p>
+            </div>
+        </section>
+
+        <!-- Agregar producto -->
+        <section class="card full">
+            <h2>Agregar producto (opcional)</h2>
+            <p class="muted">Esto simula datos ingresados por el usuario (y se guardan en el catálogo).</p>
+
+            <form id="addForm" class="form">
+                <input id="name" required minlength="2" placeholder="Nombre (ej: Licuadora)" />
+                <input id="price" required type="number" min="1" placeholder="Precio (ej: 120)" />
+                <select id="cat" required>
+                    <option value="" selected disabled>Categoría</option>
+                    <option value="Lavado">Lavado</option>
+                    <option value="Cocina">Cocina</option>
+                    <option value="Frío">Frío</option>
+                </select>
+                <button class="btn" type="submit">Agregar</button>
+            </form>
+        </section>
+    </main>
+
+    <script src="js/main.js"></script>
 </body>
 
 </html>
